--- a/todo
+++ b/todo
@@ -3,10 +3,17 @@
 * anti-replay TLS a activé ?
 * voir ce qu'il faut faire quand le build d'un packet échoue pour les trâmes,
   peut-être ne les insérer dans le paquet que si correctement buildé (le paquet)
-* voir si le paquet Version Negotiation doit être toujours émis (ou que pour une
-  connection établie)
+* voir si le paquet Version Negotiation doit être toujours émis (ou que pour une connection établie)
 * les clients qui réussissent le plus C1 interop:
   quant kwik aioquic neqo
 * voir pb le lag avec curl, sans les patches accept-queue d'Amaury
 * drop des paquets 0RTT
 * limiter le boulot pour quic_lstnr_dghdlr() (nombre de dgrams à traiter ?)
+* pb sur réception d'un CC frame lorsque le mux n'est pas initialisé
+  ici :
+          case QUIC_FT_CONNECTION_CLOSE:
+          case QUIC_FT_CONNECTION_CLOSE_APP:
+            /* warn the mux to close the connection */
+            qc->qcc->flags |= QC_CF_CC_RECV;
+            tasklet_wakeup(qc->qcc->wait_event.tasklet);
+            break;
