--- a/todo
+++ b/todo
@@ -29,3 +29,11 @@
   to be larger than the congestion window, unless the packet is sent on a PTO timer expiration
   (see Section 6.2) or when entering recovery
 
+Amélioration diagnostic QUIC
+* support pcap
+* support QLOG
+  -> regarder intérêt du QLOG avec QVIS
+* amélioration trace
+  -> définir des niveaux de traces
+  -> ajouter des traces dans le MUX
+     réutiliser la quic_conn pour lockon sur les traces
